# homunculus

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  WORKFLOW.md  homunculus.example.toml  homunculus.toml  pyproject.toml
.github/workflows/: harness.yml
.planning/: CODEBASE.md  PROJECT.md  ROADMAP.md  STATE.md
.planning/specs/: 05-full-autonomy-spec.md
docs/: architecture.md  autonomy-roadmap.md  harness-engineering.md  index.md  operator-guide.md  quality-score.md  setup-and-configuration.md  symphony-autonomy.md  technical-architecture.md  vm-runbook.md
homunculus/: __init__.py  cli.py  config.py  daemon.py  harness.py  models.py  policy.py  runtime.py  storage.py  suggestions.py
homunculus/autonomy/: __init__.py  acceptance.py  models.py  precheck.py  preflight.py  reporter.py  sources.py  watchdog.py
homunculus/dataset_builder/: builder.py
homunculus/evolution/: __init__.py  lineage.py  merge.py  validation.py
homunculus/introspection/: __init__.py  base.py  comparative.py  coverage.py  critique.py  metrics.py  scheduler.py
homunculus/memory_client/: __init__.py  base.py  engram.py  (+1 more)
models/: registry.json
suggestions/: phase1-daemon-mode.md
tests/: test_auto_commit.py  test_autonomy.py  test_config_evolution.py  test_daemon.py  test_dataset_builder.py  test_evolution.py  test_harness.py  test_introspection.py  test_orchestrator.py  test_packaging.py  test_policy.py  test_prioritizer.py  test_suggestions.py  test_symphony.py  test_task_generator.py  test_task_queue.py  test_task_runner.py  test_trainer.py
traces/: episodes.jsonl  events.jsonl
(+88 files in other folders)
